# projecteuler

./: .gitignore  README.org  main.c  meson.build
builddir/meson-private/: coredata.dat.prev
include/: .meson.build.swp  meson.build  numman.h  primes.h  problems.h  sums.h
mocksolutions/p1/: main.c
mocksolutions/p10/: main.c
mocksolutions/p3/: main.c
mocksolutions/p4/: main.c
mocksolutions/p5/: main.c
mocksolutions/p6/: main.c
mocksolutions/p8/: main.c
p2/: main.c
p7/: main.c
p8/: main.c
p9/: main.c
src/: main.c  meson.build  numman.c  primes.c  problems.c  structures.c  sums.c
